# Web-NoSQL

./: README.md  pyproject.toml
MongoDB/: models.py
RabbitMQ/: producer.py
